--- a/indexFiltro.html
+++ b/indexFiltro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Filtro de Nomes</title>
     <script>
         function escreverMsg() {
             const texto = document.getElementById("txtMsg").value;
@@ -31,67 +31,177 @@
         }
     </script>
     <style>
-        
+        .lista {
+            margin: auto;
+            background-color: rgb(88, 190, 156);
+        }
+
+        li {
+            width: 25%;
+            border: 1px solid black;
+            background-color: aquamarine;
+        }
     </style>
 </head>
 
 <body>
-    <form action="">
-        <label for="">Filtro</label>
-        <input type="text" id="filtro" oninput="filtra();">
+    <div class="lista">
+        <form action="">
+            <label for="">Filtro</label>
+            <input type="text" id="filtro" oninput="filtra();">
 
-    </form>
-    <ul>
-        <li>Ana</li>
-        <li>Amélia</li>
-        <li>Alice</li>
-        <li>Arline</li>
-        <li>Andrade</li>
-        <li>Beatriz</li>
-        <li>Bianca</li>
-        <li>Barbára</li>
-        <li>Barbosa</li>
-        <li>Beline</li>
-        <li>Carla</li>
-        <li>Candice</li>
-        <li>Claudia</li>
-        <li>Clarice</li>
-        <li>Centina</li>
-        <li>Débora</li>
-        <li>Danise</li>
-        <li>Danila</li>
-        <li>Daniela</li>
-        <li>Dormira</li>
-        <li>Eduarda</li>
-        <li>Edinéia</li>
-        <li>Ednilce</li>
-        <li>Esther</li>
-        <li>Elena</li>
-        <li>Fábia</li>
-        <li>Felipa</li>
-        <li>Fernanda</li>
-        <li>Felícia</li>
-        <li>Fabiana</li>
-        <li>Júlia</li>
-        <li>Juliana</li>
-        <li>Juliane</li>
-        <li>Janina</li>
-        <li>Jamile</li>
-        <li>Laura</li>
-        <li>Linda</li>
-        <li>Lena</li>
-        <li>Larissa</li>
-        <li>Marisa</li>
-        <li>Mara</li>
-        <li>Manuela</li>
-        <li>Natália</li>
-        <li>Nanda</li>
-        <li>Paula</li>
-        <li>Patrícia</li>
-        <li>Olívia</li>
-        <li>Victória</li>
-        <li>Vonice</li>
-    </ul>
+        </form>
+        <ul>
+
+            <li>Ana</li>
+
+
+            <li>Amélia</li>
+
+
+            <li>Alice</li>
+
+
+            <li>Arline</li>
+
+
+            <li>Andrade</li>
+
+
+            <li>Beatriz</li>
+
+
+            <li>Bianca</li>
+
+
+            <li>Barbára</li>
+
+
+            <li>Barbosa</li>
+
+
+            <li>Beline</li>
+
+
+            <li>Carla</li>
+
+
+            <li>Candice</li>
+
+
+            <li>Claudia</li>
+
+
+            <li>Clarice</li>
+
+
+            <li>Centina</li>
+
+
+            <li>Débora</li>
+
+
+            <li>Danise</li>
+
+
+            <li>Danila</li>
+
+
+            <li>Daniela</li>
+
+
+            <li>Dormira</li>
+
+
+            <li>Eduarda</li>
+
+
+            <li>Edinéia</li>
+
+
+            <li>Ednilce</li>
+
+
+            <li>Esther</li>
+
+
+            <li>Elena</li>
+
+
+            <li>Fábia</li>
+
+
+            <li>Felipa</li>
+
+
+            <li>Fernanda</li>
+
+
+            <li>Felícia</li>
+
+
+            <li>Fabiana</li>
+
+
+            <li>Júlia</li>
+
+
+            <li>Juliana</li>
+
+
+            <li>Juliane</li>
+
+
+            <li>Janina</li>
+
+
+            <li>Jamile</li>
+
+
+            <li>Laura</li>
+
+
+            <li>Linda</li>
+
+
+            <li>Lena</li>
+
+
+            <li>Larissa</li>
+
+
+            <li>Marisa</li>
+
+
+            <li>Mara</li>
+
+
+            <li>Manuela</li>
+
+
+            <li>Natália</li>
+
+
+            <li>Nanda</li>
+
+
+            <li>Paula</li>
+
+
+            <li>Patrícia</li>
+
+
+            <li>Olívia</li>
+
+
+            <li>Victória</li>
+
+
+            <li>Vonice</li>
+
+        </ul>
+
+    </div>
 </body>
 
 </html>
